--- a/assets/deveb-s1n0/_dil-en.scss
+++ b/assets/deveb-s1n0/_dil-en.scss
@@ -76,7 +76,7 @@ $büyükleriyle-gizle: hide-with-bigger;
 $diğerlerini-gizle: hide-other;
 
 /* */
-$aralık: offset;
+$aralık: spacing;
 $araları: araları;
 $oluk-çevre: oluk-çevre;
 $oluk: oluk;
