--- a/assets/deveb-s1n0/_dil-en.scss
+++ b/assets/deveb-s1n0/_dil-en.scss
@@ -15,6 +15,9 @@ $dev: hg;
 $soldan: left;
 $sağdan: right;
 
+/* Sıralama Düzeni */
+$nc: th;
+
 /* Konumlama - Kap Örgüsü */
 $sütun: col;
 $satır: row;
