--- a/assets/deveb-s1n0/_dil-tr.scss
+++ b/assets/deveb-s1n0/_dil-tr.scss
@@ -12,9 +12,11 @@ $kcm: kcm;
 $dev: dev;
 
 /* Kap Örgüsü */
-
 $soldan: soldan;
 $sağdan: sağdan;
+
+/* Sıralama Düzeni */
+$nc: nc;
 
 /* Konumlama - Kap Örgüsü */
 $sütun: sütun;
