--- a/assets/deveb-s1n0/deveb-ie.css
+++ b/assets/deveb-s1n0/deveb-ie.css
@@ -2,6 +2,7 @@
 /* Türkçe http://www.objgen.com/json/models/nuZ   */
 /* Ekran Örgüsü */
 /* Kap Örgüsü */
+/* Sıralama Düzeni */
 /* Konumlama - Kap Örgüsü */
 /* Durumlama - Kap Örgüsü */
 /* */
