--- a/assets/deveb-s1n0/deveb-en.css
+++ b/assets/deveb-s1n0/deveb-en.css
@@ -1227,99 +1227,99 @@ body[data-gnl~="sütun"] > footer {
   width: auto;
 }
 
-[data-gnl~="1nc"] {
+[data-gnl~="1th"] {
   order: 1;
 }
 
-[data-gnl~="2nc"] {
+[data-gnl~="2th"] {
   order: 2;
 }
 
-[data-gnl~="3nc"] {
+[data-gnl~="3th"] {
   order: 3;
 }
 
-[data-gnl~="4nc"] {
+[data-gnl~="4th"] {
   order: 4;
 }
 
-[data-gnl~="5nc"] {
+[data-gnl~="5th"] {
   order: 5;
 }
 
-[data-gnl~="6nc"] {
+[data-gnl~="6th"] {
   order: 6;
 }
 
-[data-gnl~="7nc"] {
+[data-gnl~="7th"] {
   order: 7;
 }
 
-[data-gnl~="8nc"] {
+[data-gnl~="8th"] {
   order: 8;
 }
 
-[data-gnl~="9nc"] {
+[data-gnl~="9th"] {
   order: 9;
 }
 
-[data-gnl~="10nc"] {
+[data-gnl~="10th"] {
   order: 10;
 }
 
-[data-gnl~="11nc"] {
+[data-gnl~="11th"] {
   order: 11;
 }
 
-[data-gnl~="12nc"] {
+[data-gnl~="12th"] {
   order: 12;
 }
 
-[data-gnl~="13nc"] {
+[data-gnl~="13th"] {
   order: 13;
 }
 
-[data-gnl~="14nc"] {
+[data-gnl~="14th"] {
   order: 14;
 }
 
-[data-gnl~="15nc"] {
+[data-gnl~="15th"] {
   order: 15;
 }
 
-[data-gnl~="16nc"] {
+[data-gnl~="16th"] {
   order: 16;
 }
 
-[data-gnl~="17nc"] {
+[data-gnl~="17th"] {
   order: 17;
 }
 
-[data-gnl~="18nc"] {
+[data-gnl~="18th"] {
   order: 18;
 }
 
-[data-gnl~="19nc"] {
+[data-gnl~="19th"] {
   order: 19;
 }
 
-[data-gnl~="20nc"] {
+[data-gnl~="20th"] {
   order: 20;
 }
 
-[data-gnl~="21nc"] {
+[data-gnl~="21th"] {
   order: 21;
 }
 
-[data-gnl~="22nc"] {
+[data-gnl~="22th"] {
   order: 22;
 }
 
-[data-gnl~="23nc"] {
+[data-gnl~="23th"] {
   order: 23;
 }
 
-[data-gnl~="24nc"] {
+[data-gnl~="24th"] {
   order: 24;
 }
 
@@ -2027,99 +2027,99 @@ S01 [data-xs] UFAK-BÜYÜKLERİYLE | 300px ≤ *
     width: auto;
   }
 
-  [data-xs~="1nc"] {
+  [data-xs~="1th"] {
     order: 1;
   }
 
-  [data-xs~="2nc"] {
+  [data-xs~="2th"] {
     order: 2;
   }
 
-  [data-xs~="3nc"] {
+  [data-xs~="3th"] {
     order: 3;
   }
 
-  [data-xs~="4nc"] {
+  [data-xs~="4th"] {
     order: 4;
   }
 
-  [data-xs~="5nc"] {
+  [data-xs~="5th"] {
     order: 5;
   }
 
-  [data-xs~="6nc"] {
+  [data-xs~="6th"] {
     order: 6;
   }
 
-  [data-xs~="7nc"] {
+  [data-xs~="7th"] {
     order: 7;
   }
 
-  [data-xs~="8nc"] {
+  [data-xs~="8th"] {
     order: 8;
   }
 
-  [data-xs~="9nc"] {
+  [data-xs~="9th"] {
     order: 9;
   }
 
-  [data-xs~="10nc"] {
+  [data-xs~="10th"] {
     order: 10;
   }
 
-  [data-xs~="11nc"] {
+  [data-xs~="11th"] {
     order: 11;
   }
 
-  [data-xs~="12nc"] {
+  [data-xs~="12th"] {
     order: 12;
   }
 
-  [data-xs~="13nc"] {
+  [data-xs~="13th"] {
     order: 13;
   }
 
-  [data-xs~="14nc"] {
+  [data-xs~="14th"] {
     order: 14;
   }
 
-  [data-xs~="15nc"] {
+  [data-xs~="15th"] {
     order: 15;
   }
 
-  [data-xs~="16nc"] {
+  [data-xs~="16th"] {
     order: 16;
   }
 
-  [data-xs~="17nc"] {
+  [data-xs~="17th"] {
     order: 17;
   }
 
-  [data-xs~="18nc"] {
+  [data-xs~="18th"] {
     order: 18;
   }
 
-  [data-xs~="19nc"] {
+  [data-xs~="19th"] {
     order: 19;
   }
 
-  [data-xs~="20nc"] {
+  [data-xs~="20th"] {
     order: 20;
   }
 
-  [data-xs~="21nc"] {
+  [data-xs~="21th"] {
     order: 21;
   }
 
-  [data-xs~="22nc"] {
+  [data-xs~="22th"] {
     order: 22;
   }
 
-  [data-xs~="23nc"] {
+  [data-xs~="23th"] {
     order: 23;
   }
 
-  [data-xs~="24nc"] {
+  [data-xs~="24th"] {
     order: 24;
   }
 
@@ -2824,99 +2824,99 @@ S02 KÇK-ilker ($kçk) veya (kçk-ilker) | Ekran ölçeği: 576px ≤ *
     width: auto;
   }
 
-  [data-sm~="1nc"] {
+  [data-sm~="1th"] {
     order: 1;
   }
 
-  [data-sm~="2nc"] {
+  [data-sm~="2th"] {
     order: 2;
   }
 
-  [data-sm~="3nc"] {
+  [data-sm~="3th"] {
     order: 3;
   }
 
-  [data-sm~="4nc"] {
+  [data-sm~="4th"] {
     order: 4;
   }
 
-  [data-sm~="5nc"] {
+  [data-sm~="5th"] {
     order: 5;
   }
 
-  [data-sm~="6nc"] {
+  [data-sm~="6th"] {
     order: 6;
   }
 
-  [data-sm~="7nc"] {
+  [data-sm~="7th"] {
     order: 7;
   }
 
-  [data-sm~="8nc"] {
+  [data-sm~="8th"] {
     order: 8;
   }
 
-  [data-sm~="9nc"] {
+  [data-sm~="9th"] {
     order: 9;
   }
 
-  [data-sm~="10nc"] {
+  [data-sm~="10th"] {
     order: 10;
   }
 
-  [data-sm~="11nc"] {
+  [data-sm~="11th"] {
     order: 11;
   }
 
-  [data-sm~="12nc"] {
+  [data-sm~="12th"] {
     order: 12;
   }
 
-  [data-sm~="13nc"] {
+  [data-sm~="13th"] {
     order: 13;
   }
 
-  [data-sm~="14nc"] {
+  [data-sm~="14th"] {
     order: 14;
   }
 
-  [data-sm~="15nc"] {
+  [data-sm~="15th"] {
     order: 15;
   }
 
-  [data-sm~="16nc"] {
+  [data-sm~="16th"] {
     order: 16;
   }
 
-  [data-sm~="17nc"] {
+  [data-sm~="17th"] {
     order: 17;
   }
 
-  [data-sm~="18nc"] {
+  [data-sm~="18th"] {
     order: 18;
   }
 
-  [data-sm~="19nc"] {
+  [data-sm~="19th"] {
     order: 19;
   }
 
-  [data-sm~="20nc"] {
+  [data-sm~="20th"] {
     order: 20;
   }
 
-  [data-sm~="21nc"] {
+  [data-sm~="21th"] {
     order: 21;
   }
 
-  [data-sm~="22nc"] {
+  [data-sm~="22th"] {
     order: 22;
   }
 
-  [data-sm~="23nc"] {
+  [data-sm~="23th"] {
     order: 23;
   }
 
-  [data-sm~="24nc"] {
+  [data-sm~="24th"] {
     order: 24;
   }
 
@@ -3621,99 +3621,99 @@ S03 ORTA-ilker ($ort) veya (ort-ilker) | Ekran ölçeği: 768px ≤ *
     width: auto;
   }
 
-  [data-md~="1nc"] {
+  [data-md~="1th"] {
     order: 1;
   }
 
-  [data-md~="2nc"] {
+  [data-md~="2th"] {
     order: 2;
   }
 
-  [data-md~="3nc"] {
+  [data-md~="3th"] {
     order: 3;
   }
 
-  [data-md~="4nc"] {
+  [data-md~="4th"] {
     order: 4;
   }
 
-  [data-md~="5nc"] {
+  [data-md~="5th"] {
     order: 5;
   }
 
-  [data-md~="6nc"] {
+  [data-md~="6th"] {
     order: 6;
   }
 
-  [data-md~="7nc"] {
+  [data-md~="7th"] {
     order: 7;
   }
 
-  [data-md~="8nc"] {
+  [data-md~="8th"] {
     order: 8;
   }
 
-  [data-md~="9nc"] {
+  [data-md~="9th"] {
     order: 9;
   }
 
-  [data-md~="10nc"] {
+  [data-md~="10th"] {
     order: 10;
   }
 
-  [data-md~="11nc"] {
+  [data-md~="11th"] {
     order: 11;
   }
 
-  [data-md~="12nc"] {
+  [data-md~="12th"] {
     order: 12;
   }
 
-  [data-md~="13nc"] {
+  [data-md~="13th"] {
     order: 13;
   }
 
-  [data-md~="14nc"] {
+  [data-md~="14th"] {
     order: 14;
   }
 
-  [data-md~="15nc"] {
+  [data-md~="15th"] {
     order: 15;
   }
 
-  [data-md~="16nc"] {
+  [data-md~="16th"] {
     order: 16;
   }
 
-  [data-md~="17nc"] {
+  [data-md~="17th"] {
     order: 17;
   }
 
-  [data-md~="18nc"] {
+  [data-md~="18th"] {
     order: 18;
   }
 
-  [data-md~="19nc"] {
+  [data-md~="19th"] {
     order: 19;
   }
 
-  [data-md~="20nc"] {
+  [data-md~="20th"] {
     order: 20;
   }
 
-  [data-md~="21nc"] {
+  [data-md~="21th"] {
     order: 21;
   }
 
-  [data-md~="22nc"] {
+  [data-md~="22th"] {
     order: 22;
   }
 
-  [data-md~="23nc"] {
+  [data-md~="23th"] {
     order: 23;
   }
 
-  [data-md~="24nc"] {
+  [data-md~="24th"] {
     order: 24;
   }
 
@@ -4418,99 +4418,99 @@ S04 BÜYÜK-ilker ($byk) veya (byk-ilker) | Ekran ölçeği: 992px ≤ *
     width: auto;
   }
 
-  [data-lg~="1nc"] {
+  [data-lg~="1th"] {
     order: 1;
   }
 
-  [data-lg~="2nc"] {
+  [data-lg~="2th"] {
     order: 2;
   }
 
-  [data-lg~="3nc"] {
+  [data-lg~="3th"] {
     order: 3;
   }
 
-  [data-lg~="4nc"] {
+  [data-lg~="4th"] {
     order: 4;
   }
 
-  [data-lg~="5nc"] {
+  [data-lg~="5th"] {
     order: 5;
   }
 
-  [data-lg~="6nc"] {
+  [data-lg~="6th"] {
     order: 6;
   }
 
-  [data-lg~="7nc"] {
+  [data-lg~="7th"] {
     order: 7;
   }
 
-  [data-lg~="8nc"] {
+  [data-lg~="8th"] {
     order: 8;
   }
 
-  [data-lg~="9nc"] {
+  [data-lg~="9th"] {
     order: 9;
   }
 
-  [data-lg~="10nc"] {
+  [data-lg~="10th"] {
     order: 10;
   }
 
-  [data-lg~="11nc"] {
+  [data-lg~="11th"] {
     order: 11;
   }
 
-  [data-lg~="12nc"] {
+  [data-lg~="12th"] {
     order: 12;
   }
 
-  [data-lg~="13nc"] {
+  [data-lg~="13th"] {
     order: 13;
   }
 
-  [data-lg~="14nc"] {
+  [data-lg~="14th"] {
     order: 14;
   }
 
-  [data-lg~="15nc"] {
+  [data-lg~="15th"] {
     order: 15;
   }
 
-  [data-lg~="16nc"] {
+  [data-lg~="16th"] {
     order: 16;
   }
 
-  [data-lg~="17nc"] {
+  [data-lg~="17th"] {
     order: 17;
   }
 
-  [data-lg~="18nc"] {
+  [data-lg~="18th"] {
     order: 18;
   }
 
-  [data-lg~="19nc"] {
+  [data-lg~="19th"] {
     order: 19;
   }
 
-  [data-lg~="20nc"] {
+  [data-lg~="20th"] {
     order: 20;
   }
 
-  [data-lg~="21nc"] {
+  [data-lg~="21th"] {
     order: 21;
   }
 
-  [data-lg~="22nc"] {
+  [data-lg~="22th"] {
     order: 22;
   }
 
-  [data-lg~="23nc"] {
+  [data-lg~="23th"] {
     order: 23;
   }
 
-  [data-lg~="24nc"] {
+  [data-lg~="24th"] {
     order: 24;
   }
 
@@ -5215,99 +5215,99 @@ S05 KOCAMAN-ilker ($kcm) veya (kcm-ilker) | Ekran ölçeği: 1200px ≤ *
     width: auto;
   }
 
-  [data-xl~="1nc"] {
+  [data-xl~="1th"] {
     order: 1;
   }
 
-  [data-xl~="2nc"] {
+  [data-xl~="2th"] {
     order: 2;
   }
 
-  [data-xl~="3nc"] {
+  [data-xl~="3th"] {
     order: 3;
   }
 
-  [data-xl~="4nc"] {
+  [data-xl~="4th"] {
     order: 4;
   }
 
-  [data-xl~="5nc"] {
+  [data-xl~="5th"] {
     order: 5;
   }
 
-  [data-xl~="6nc"] {
+  [data-xl~="6th"] {
     order: 6;
   }
 
-  [data-xl~="7nc"] {
+  [data-xl~="7th"] {
     order: 7;
   }
 
-  [data-xl~="8nc"] {
+  [data-xl~="8th"] {
     order: 8;
   }
 
-  [data-xl~="9nc"] {
+  [data-xl~="9th"] {
     order: 9;
   }
 
-  [data-xl~="10nc"] {
+  [data-xl~="10th"] {
     order: 10;
   }
 
-  [data-xl~="11nc"] {
+  [data-xl~="11th"] {
     order: 11;
   }
 
-  [data-xl~="12nc"] {
+  [data-xl~="12th"] {
     order: 12;
   }
 
-  [data-xl~="13nc"] {
+  [data-xl~="13th"] {
     order: 13;
   }
 
-  [data-xl~="14nc"] {
+  [data-xl~="14th"] {
     order: 14;
   }
 
-  [data-xl~="15nc"] {
+  [data-xl~="15th"] {
     order: 15;
   }
 
-  [data-xl~="16nc"] {
+  [data-xl~="16th"] {
     order: 16;
   }
 
-  [data-xl~="17nc"] {
+  [data-xl~="17th"] {
     order: 17;
   }
 
-  [data-xl~="18nc"] {
+  [data-xl~="18th"] {
     order: 18;
   }
 
-  [data-xl~="19nc"] {
+  [data-xl~="19th"] {
     order: 19;
   }
 
-  [data-xl~="20nc"] {
+  [data-xl~="20th"] {
     order: 20;
   }
 
-  [data-xl~="21nc"] {
+  [data-xl~="21th"] {
     order: 21;
   }
 
-  [data-xl~="22nc"] {
+  [data-xl~="22th"] {
     order: 22;
   }
 
-  [data-xl~="23nc"] {
+  [data-xl~="23th"] {
     order: 23;
   }
 
-  [data-xl~="24nc"] {
+  [data-xl~="24th"] {
     order: 24;
   }
 
@@ -6012,99 +6012,99 @@ S06 DEV-ilker ($dev) veya (dev-ilker) veya (hgo) | Ekran ölçeği: 1900px ≤ *
     width: auto;
   }
 
-  [data-hg~="1nc"] {
+  [data-hg~="1th"] {
     order: 1;
   }
 
-  [data-hg~="2nc"] {
+  [data-hg~="2th"] {
     order: 2;
   }
 
-  [data-hg~="3nc"] {
+  [data-hg~="3th"] {
     order: 3;
   }
 
-  [data-hg~="4nc"] {
+  [data-hg~="4th"] {
     order: 4;
   }
 
-  [data-hg~="5nc"] {
+  [data-hg~="5th"] {
     order: 5;
   }
 
-  [data-hg~="6nc"] {
+  [data-hg~="6th"] {
     order: 6;
   }
 
-  [data-hg~="7nc"] {
+  [data-hg~="7th"] {
     order: 7;
   }
 
-  [data-hg~="8nc"] {
+  [data-hg~="8th"] {
     order: 8;
   }
 
-  [data-hg~="9nc"] {
+  [data-hg~="9th"] {
     order: 9;
   }
 
-  [data-hg~="10nc"] {
+  [data-hg~="10th"] {
     order: 10;
   }
 
-  [data-hg~="11nc"] {
+  [data-hg~="11th"] {
     order: 11;
   }
 
-  [data-hg~="12nc"] {
+  [data-hg~="12th"] {
     order: 12;
   }
 
-  [data-hg~="13nc"] {
+  [data-hg~="13th"] {
     order: 13;
   }
 
-  [data-hg~="14nc"] {
+  [data-hg~="14th"] {
     order: 14;
   }
 
-  [data-hg~="15nc"] {
+  [data-hg~="15th"] {
     order: 15;
   }
 
-  [data-hg~="16nc"] {
+  [data-hg~="16th"] {
     order: 16;
   }
 
-  [data-hg~="17nc"] {
+  [data-hg~="17th"] {
     order: 17;
   }
 
-  [data-hg~="18nc"] {
+  [data-hg~="18th"] {
     order: 18;
   }
 
-  [data-hg~="19nc"] {
+  [data-hg~="19th"] {
     order: 19;
   }
 
-  [data-hg~="20nc"] {
+  [data-hg~="20th"] {
     order: 20;
   }
 
-  [data-hg~="21nc"] {
+  [data-hg~="21th"] {
     order: 21;
   }
 
-  [data-hg~="22nc"] {
+  [data-hg~="22th"] {
     order: 22;
   }
 
-  [data-hg~="23nc"] {
+  [data-hg~="23th"] {
     order: 23;
   }
 
-  [data-hg~="24nc"] {
+  [data-hg~="24th"] {
     order: 24;
   }
 
