--- a/_layouts/s1n0/varsayilan.html
+++ b/_layouts/s1n0/varsayilan.html
@@ -4,7 +4,7 @@
 {% include s1n0/head.html %}
 </head>
 <body data-byk="tamekran">
-  <div data-byk="sığ oluk-çevre">
+  <div data-gnl="oluk-çevre" data-byk="sığ">
     <div id="sol-alan" data-gnl="t" data-kçk="4 22p sığ oluk-çevre">
       <div data-gnl="o geniş-aralıklı" data-dev="2 3p _s _o">
         <a data-gnl="0" href="/" class="logo2">deveb</a>
